Fixed alignment and spacing issues on ion-item fields

--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -1,6 +1,10 @@
 .hu_body {
   ion-item {
 
+    ion-label {
+      flex: 1;
+    }
+
     ion-input{
       input {
         text-align: right;
